# bevy-dexterous-developer-test

./: Cargo.toml  Dexterous.toml  README.md  main.rs
.cargo/: config.toml
assets/testmap/: Characters.tsx  Isometric.tsx  testmap.tiled-session  untitled.tmx
helper/: mod.rs
src/: main.rs
src/helper/: camera.rs
