cargo-features = ["codegen-backend"]

[package]
name = "sabre"
version = "0.1.0"
edition = "2021"

[dependencies]
avian2d = "0.1.2"
bevy = "0.14.2"
bevy-inspector-egui = "0.27.0"
bevy_ecs_tiled = "0.3.10"
bevy_ecs_tilemap = "0.14.0"
bevy_rapier2d = "0.27.0"

[[bin]]
name = "sabre"
path = "main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1
codegen-backend = "cranelift"

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
